# dauth

./: .gitignore  CHANGELOG.md  README.md  build.gradle  config.gradle  gradle.properties  jitpack-bak.yml  maven_publish.gradle  settings.gradle
DAuthWalletSDK/: build.gradle
DauthLoginSDK/: build.gradle
DauthLoginSDK/src/main/: AndroidManifest.xml
DauthLoginSDK/src/main/res/layout/: activity_webview.xml
DauthLoginSDK/src/main/res/values/: colors.xml  themes.xml
DauthSDK/: build.gradle
DauthSDK/src/main/res/values/: strings.xml
app/: README.md  build.gradle  dump_activity.bat  dump_activity.sh  google-services.json  proguard-rules.pro
app/libs/: DauthLoginSDK-release.aar  dauth-sdk-release.aar
app/release/: dauth-sdk-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: account_btn_shape.xml  allow_btn_shape.xml  bg_black_r5_s1.xml  bg_edit_text.xml  (+25 more)
dauth-sdk/: build.gradle  consumer-rules.pro  generate-jni.sh  generate-sol.bat  proguard-rules.pro
dauth-sdk/src/main/: AndroidManifest.xml
dauth-sdk/src/main/assets/: index.html
dauth-sdk/src/main/cpp/: CMakeLists.txt  common.h  dauth-jni.cpp  dauth-jni.h
dauth-sdk/src/main/jni/: Android.mk  Application.mk
doc/: 接入文档.MD  模块划分.puml  钱包初始化逻辑.puml
doc/tech-doc-v1/: 1.三方登录流程.puml  2.钱包登录流程.puml  3.自定义账号登录流程.puml  4.获取jwtToken流程【sdk无关】.puml  5.获取钱包地址.puml  6.发起转账流程.puml  7.查询流程.puml
doc/tech-doc-v2/: 小狐狸转账.puml  注册流程.puml  登录流程.puml  转账流程.puml
doc/tech-doc-v3/: 交易流程.puml  登录注册流程.plantuml
gradle/wrapper/: gradle-wrapper.properties
signing-keys/: dauth.jks
(+853 files in other folders)
